syntax = "proto3";

package reddit;

import "google/protobuf/timestamp.proto";

// CommentState represents the state of a comment.
enum CommentState {
  CNORMAL = 0;
  CHIDDEN = 1;
}

// Comment represents a comment made under a post or another comment.
message Comment {
  string comment_id = 1;
  string author = 2;      // Author of the comment.
  int32 score = 3;        // Score of the comment, can be negative.
  CommentState state = 4; // State of the comment.
  google.protobuf.Timestamp publication_date = 5; // Publication date of the comment.
  string text = 6;     // Content of the comment.
  string post_id = 7;
  string parent_comment_id = 8;
  bool has_replies = 9;
}
